--- a/server/package.json
+++ b/server/package.json
@@ -19,8 +19,10 @@
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.1",
     "cors": "^2.8.5",
+    "dotenv": "^14.2.0",
     "express": "~4.16.1",
     "jsonwebtoken": "^8.5.1",
+    "module-alias": "^2.2.2",
     "mongodb": "^4.3.0",
     "mongoose": "^6.1.6",
     "morgan": "^1.10.0"
@@ -32,5 +34,8 @@
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-prettier": "^3.1.4",
     "prettier": "^2.0.5"
+  },
+  "_moduleAliases": {
+    "@": "."
   }
 }
