--- a/client/package.json
+++ b/client/package.json
@@ -66,6 +66,7 @@
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.28.0",
     "prettier": "^2.3.2",
     "sass-loader": "^12.1.0"
   }
