--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "cd server && node index.js",
-    "build": "cd client && npm run build"
+    "start": "cd server && npm install && node index.js",
+    "build": "cd client && npm install && npm run build"
   },
   "heroku-run-build-script": true,
   "repository": {
