--- a/client/package.json
+++ b/client/package.json
@@ -69,5 +69,6 @@
     "eslint-plugin-react": "^7.28.0",
     "prettier": "^2.3.2",
     "sass-loader": "^12.1.0"
-  }
+  },
+  "proxy": "http://localhost:3001"
 }
